# mapper

./: MANIFEST.in  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  upload.sh
.github/workflows/: apptainer.yml  main.yml  pypi.yml
doc/: conf.py  index.rst
sequana_pipelines/: mapper.rules
sequana_pipelines/mapper/: __init__.py  config.yaml  main.py  mapper.rules  multiqc_config.yaml  requirements.txt  schema.yaml  tools.txt
test/: test_main.py
test/data/: measles.fa  measles.gbk  test.saf
